# Laghos

./: laghos.cpp  makefile
amr/: CMakeLists.txt  FindSimModSuite.cmake  README.md  config_amr.sh  laghos.cpp  laghos_solver.cpp  laghos_solver.hpp  makefile  tags
amr_conforming/: CMakeLists.txt  config_conforming_amr.sh  laghos.cpp  laghos_solver.cpp
amr_conforming/data/: cube.smd  cube0.smb  cube_nat.x_t
